# opencv_beagle

./: .gitignore  CMakeLists.txt
src/: main.cpp
